; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/broadcom/bcm2835/extr_bcm2835_intr.c_bcm_intc_isrc_mask.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/broadcom/bcm2835/extr_bcm2835_intr.c_bcm_intc_isrc_mask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bcm_intc_softc = type { i32 }
%struct.bcm_intc_irqsrc = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bcm_intc_softc*, %struct.bcm_intc_irqsrc*)* @bcm_intc_isrc_mask to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bcm_intc_isrc_mask(%struct.bcm_intc_softc* %0, %struct.bcm_intc_irqsrc* %1) #0 {
  %3 = alloca %struct.bcm_intc_softc*, align 8
  %4 = alloca %struct.bcm_intc_irqsrc*, align 8
  store %struct.bcm_intc_softc* %0, %struct.bcm_intc_softc** %3, align 8
  store %struct.bcm_intc_irqsrc* %1, %struct.bcm_intc_irqsrc** %4, align 8
  %5 = load %struct.bcm_intc_softc*, %struct.bcm_intc_softc** %3, align 8
  %6 = load %struct.bcm_intc_irqsrc*, %struct.bcm_intc_irqsrc** %4, align 8
  %7 = getelementptr inbounds %struct.bcm_intc_irqsrc, %struct.bcm_intc_irqsrc* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.bcm_intc_irqsrc*, %struct.bcm_intc_irqsrc** %4, align 8
  %10 = getelementptr inbounds %struct.bcm_intc_irqsrc, %struct.bcm_intc_irqsrc* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @intc_write_4(%struct.bcm_intc_softc* %5, i32 %8, i32 %11)
  ret void
}

declare dso_local i32 @intc_write_4(%struct.bcm_intc_softc*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
